--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -182,11 +182,10 @@ layout: default
 <!-- 본문 상단에 고정된 앵커 광고 -->
 <div class="anchor-ad-top">
   <ins class="adsbygoogle"
-       style="display:block; width: 100%; height: 10px; margin: auto; text-align: center;"
+       style="display:inline-block;width:728px;height:90px"
        data-ad-client="ca-pub-9374368296307755"
-       data-ad-slot="9952845435"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
+       data-ad-slot="3603389079"></ins>
+
   <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
@@ -198,7 +197,7 @@ layout: default
       top: 0; /* 화면 상단에 고정 */
       left: 0;
       width: 100%;
-      height: 10px; /* 광고 높이 설정 */
+      height: 90px; /* 광고 높이 설정 */
       background-color: #fff;
       z-index: 1002; /* 다른 요소 위에 표시 */
       box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1); /* 하단 그림자 */
